# AcceptanceTestBot

./: .env.example  .gitignore  Cargo.toml  README.md  reset_test_repo.sh  setup.sh  setup_test_repo.sh  slack-test-branch-names.json
slack-snapshots/: add-locations-merge-conflict.json  add-locations-no-failures.json  add-locations-no-locations.json  add-locations-no-successes.json  add-locations-pr-fail.json  add-locations-success.json  add-locations-warn-undeleted-branch.json  add-tests-merge-conflict.json  add-tests-no-tests-found.json  add-tests-pr-fail.json  add-tests-success-all-compilation-errors.json  add-tests-success-mixed-compilation-results.json  add-tests-success-mixed.json  add-tests-success-no-compilation-errors.json  add-tests-success-warn-undeleted-branch-errors.json  error-view.json  failed-to-open-pull-request.json  locations-list-no-locations.json  locations-list-success.json  merge-conflict.json  pending.json  remove-tests-merge-conflict.json  remove-tests-none-removed.json  remove-tests-pr-fail.json  remove-tests-success-warn-undeleted-branch.json  remove-tests-success.json  search-tests-no-tests-found.json  search-tests-success.json  test-snapshot.json  warn-undeleted-branch.json
src/: main.rs
src/generation/: constants.rs  interface.rs  locations.rs  mod.rs  test_case.rs  typescript.rs
src/git/: branch_name.rs  edit.rs  metadata.rs  mod.rs  pull_request.rs  repo.rs  test_support.rs
src/http/: mod.rs  password.rs  response_result.rs  routes.rs  server.rs  server_environment.rs
src/language/: ast.rs  commands.rs  compilation_results.rs  compiler.rs  (+7 more)
(+68 files in other folders)
