[package]
name = "roswaal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
git2 = "0.19.0"
log = "0.4.22"
nanoid = "0.4.0"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
] }
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.38.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
] }
tower = "0.4.13"
openssl = { version = "0.10", features = ["vendored"] }
axum-extra = "0.9.3"

[dev-dependencies]
axum-test = "15.3.0"
